fixed navbar vertical-alignment

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -14,6 +14,7 @@
     align-items: center;
 
     .coditas_logo_container {
+      margin-top: 6px;
       width: 40%;
       text-align: left;
       padding: 5px 0;
